--- a/ASSETS/IMG/CSS/index.html
+++ b/ASSETS/IMG/CSS/index.html
@@ -12,12 +12,15 @@
 <h1>Cosè un Algoritmo?</h1>
 
 <h3>E' una serie finita di istruzioni per la risoluzioni di problemi,<br>ci descrive come fare qualcosa,e' una serie di
-    regole da seguire con precisione.</h3>
+    regole da seguire con precisione.
+    Da Atleta Paragono un algoritmo come le serie e  le ripetizioni che si trovano all' interno 
+    <br>di una scheda di allenamento da eseguire con precisione</h3>
 
 <h1>Cosè una Variabile?</h1>
 
 <h3>Le variabili nel coding sono il contenitore e hanno dei nomi unici. <br>E' come una scatola,
-    a cui diamo un nome univoco e un valore.
+    a cui diamo un nome univoco e un valore. Paragono invece le variabili come una scheda di Allenamento <br>che al suo interno 
+    contiene una serie di esercizi a cui viene assegnato un nome e un valore.
 </h3>
 
 <h1>undefined e null sono la stessa cosa!</h1>
